# espcam

./: .gitignore  CLAUDE.md  CLOUD_UPLOAD_FEATURES.md  CMakeLists.txt  STREAM_FEATURES.md  sdkconfig.defaults  test_cloud_upload.cpp  test_stream_pusher.cpp
main/: CMakeLists.txt  Kconfig.projbuild  camera_controller.cpp  camera_controller.hpp  cloud_uploader.cpp  cloud_uploader.hpp  flash_storage.cpp  flash_storage.hpp  h264_encoder.cpp  h264_encoder.hpp  idf_component.yml  main.cpp  motion_detector.cpp  motion_detector.hpp  mqtt_client.cpp  mqtt_client.hpp  network_camera.cpp  network_camera.hpp  stream_pusher.cpp  stream_pusher.hpp  task_manager.cpp  task_manager.hpp  ts_muxer.cpp  ts_muxer.hpp  video_recorder.cpp  video_recorder.hpp  wifi_provisioning.cpp  wifi_provisioning.hpp
